--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,11 @@
     "react"
   ],
 
+  "globals": {
+    "React": true,
+    "ReactDOM": true
+  },
+
   "ecmaFeatures": {
     "arrowFunctions": true,
     "binaryLiterals": true,
