Use `marked` to parse the markdown source and display it in a separate div

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
 
   "globals": {
     "React": true,
-    "ReactDOM": true
+    "ReactDOM": true,
+    "marked": true
   },
 
   "ecmaFeatures": {
